group 'info.gngr'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

ant.importBuild 'src/build.xml'

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
